kubernetes/apps/base/vaultwarden/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwawrden
  labels:
    app.kubernetes.io/name: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer-production
    external-dns.alpha.kubernetes.io/hostname: vaultwarden.skwig.party
    external-dns.alpha.kubernetes.io/target: 192.168.100.47
spec:
  ingressClassName: nginx
  rules:
    - host: vaultwarden.skwig.party
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: vaultwarden
                port:
                  name: http
  tls:
    - secretName: vaultwarden-tls
      hosts:
        - vaultwarden.skwig.party
